--- a/404.html
+++ b/404.html
@@ -3,6 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/main.js"></script>
+    <script src="404.js"></script>
 </head>
 </html>
