--- a/404.html
+++ b/404.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="404.js"></script>
+    <script>
+        window.location.replace("http://tkmm.org");
+    </script>
 </head>
 </html>
