Try to redirect page for page

--- a/404.html
+++ b/404.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
-        window.location.replace("http://tkmm.org");
+        var result = window.location.href
+            .replace("http://127.0.0.1:5500/", "")
+            .replace("404.html", "");
+        window.location.replace("https://tkmm.org/" + result);
     </script>
 </head>
 </html>
