Replace debug url

--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
         var result = window.location.href
-            .replace("http://127.0.0.1:5500/", "")
+            .replace("https://totkmods.github.io/", "")
             .replace("404.html", "");
         window.location.replace("https://tkmm.org/" + result);
     </script>
